added CIRCUIT related training code and update cnn_tools.py to work

--- a/Examples/JAMS/circuit_membrane_detector.ipynb
+++ b/Examples/JAMS/circuit_membrane_detector.ipynb
@@ -27,10 +27,11 @@
     "import numpy as np\n",
     "import pylab as plt\n",
     "import matplotlib.gridspec as gridspec\n",
+    "import SimpleITK as sitk #you will need to install the simpleitk package on your computer\n",
     "\n",
     "np.random.seed(9999)\n",
     "\n",
-    "import keras\n",
+    "import keras #keras and tensorflow need to be at the most current version, or it might not work\n",
     "from keras import backend as K\n",
     "from keras.models import load_model\n",
     "\n",
@@ -48,27 +49,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "# load data\n",
-    "isbi_dir = os.path.expanduser('~/CIRCUIT/bio-segmentation-dense/Data')\n",
-    "X_test = load_multilayer_tiff(os.path.join(isbi_dir, 'test-volume.tif'))\n",
-    "X_test /= 255.\n",
+    "isbi_dir = os.path.expanduser('~/CIRCUIT/team1/completed/1605') #this is the path to the folder with your niftii data\n",
     "\n",
-    "X_train = load_multilayer_tiff(os.path.join(isbi_dir, 'train-volume.tif'))\n",
-    "X_train /= 255.\n",
+    "test_nii = sitk.ReadImage(os.path.join(isbi_dir, 'team1_waypoint_201610_full_May6_25k_201610_dataset_em_1695.nii.gz'))\n",
+    "test_nii = sitk.Cast(test_nii, sitk.sitkUInt8)\n",
+    "X_test = sitk.GetArrayFromImage(test_nii) #converts image to array\n",
+    "X_test = X_test / 255. #scales array values\n",
+    "X_test = np.expand_dims(X_test, axis=1) #adds the color channel dimension to array\n",
     "\n",
-    "Y_train = load_multilayer_tiff(os.path.join(isbi_dir, 'train-labels.tif'))\n",
+    "train_nii = sitk.ReadImage(os.path.join(isbi_dir, 'team1_waypoint_201610_full_May6_25k_201610_dataset_em_1640.nii.gz'))\n",
+    "train_nii = sitk.Cast(train_nii, sitk.sitkUInt8)\n",
+    "X_train = sitk.GetArrayFromImage(train_nii)\n",
+    "X_train = X_train / 255.\n",
+    "X_train = np.expand_dims(X_train, axis=1)\n",
+    "\n",
+    "\n",
+    "label_nii = sitk.ReadImage(os.path.join(isbi_dir, 'team1_waypoint_201610_full_May6_25k_201610_dataset_em_1640_mem.nii.gz'))\n",
+    "label_nii = sitk.Cast(label_nii, sitk.sitkUInt8)\n",
+    "Y_train = sitk.GetArrayFromImage(label_nii)\n",
     "Y_train[Y_train==255] = 1\n",
+    "Y_train = np.expand_dims(Y_train, axis=1)\n",
+    "\n",
     "\n",
     "print('[info]: test data has shape:     ', X_test.shape)\n",
     "print('[info]: train data has shape:     ', X_train.shape)\n",
     "\n",
     "# load model\n",
     "model = create_unet((1, 256, 256))\n",
-    "model.load_weights('./weights_epoch0011.hdf5')\n",
+    "model.load_weights('./U-Net_weights_epoch0003.hdf5')\n",
     "\n",
     "print('[info]: model input shape: ', model.input_shape)"
    ]
@@ -101,7 +115,7 @@
     "# visualize performance on test data\n",
     "# Note: ISBI does not make truth available for test data.\n",
     "\n",
-    "for z in [0, 9, 19, 29]:\n",
+    "for z in [0, 1, 2, 3, 4]:\n",
     "    plt.figure(figsize=(8,8))\n",
     "    plt.subplot(1,3,1)\n",
     "    plt.imshow(X_test[z,0,...], cmap='bone'); plt.axis('off')\n",
@@ -151,8 +165,8 @@
    "source": [
     "# also take a quick look at some training data\n",
     "\n",
-    "for z in [5,]:\n",
-    "    plt.figure(figsize=(10,4))\n",
+    "for z in [0,1,2,3,4]:\n",
+    "    plt.figure(figsize=(40,16))\n",
     "    \n",
     "    plt.subplot(2,4,1)\n",
     "    plt.imshow(X_train[z,0,...], cmap='bone'); plt.axis('off')\n",
@@ -178,6 +192,17 @@
     "    \n",
     "    plt.subplots_adjust(wspace=0.05, hspace=.05)\n",
     "    plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "    "
    ]
   }
  ],
